add beta div unit testing

--- a/evident/tests/support_files/simulated_data_setting.ipynb
+++ b/evident/tests/support_files/simulated_data_setting.ipynb
@@ -9,19 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.spatial import distance_matrix"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## simulated mapping files"
+    "## simulated mapping files for alpha diversities"
    ]
   },
   {
@@ -141,6 +142,113 @@
     "alpha_pd.to_csv('alpha_pd.txt', sep='\\t')\n",
     "alpha_sn.to_csv('alpha_sn.txt', sep='\\t')\n",
     "alpha_otu.to_csv('alpha_otu.txt', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## simulated mapping files for beta diversities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# general mapping file: 120 subjects with 20 missing values \n",
+    "# BMI -- continous variable; \n",
+    "# Site -- categorical variable with 2 levels; \n",
+    "# Race -- categorical variable with 4 levels\n",
+    "\n",
+    "np.random.seed(31)\n",
+    "mapping = pd.DataFrame(\n",
+    "    {'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "     'BMI': np.append(np.sort(np.round(np.random.normal(loc=20, scale=5,\n",
+    "                      size=100), decimals=0)), np.repeat('nan', 20)),\n",
+    "     'Site': np.append(np.repeat(np.array(['US', 'UK']), 50),\n",
+    "                       np.repeat('Not applicable', 20)),\n",
+    "     'Race': np.append(np.repeat(np.array(['White', 'Hispanics',\n",
+    "                                           'Asian', 'Others']), 25),\n",
+    "                       np.repeat('Missing: Not provided', 20))})\n",
+    "mapping.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "# separate mapping files\n",
+    "# bmi\n",
+    "mapping_bmi = pd.DataFrame({'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "                            'BMI': mapping.BMI})\n",
+    "mapping_bmi.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "# site\n",
+    "mapping_site = pd.DataFrame({'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "                             'Site': mapping.Site})\n",
+    "mapping_site.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "# race\n",
+    "mapping_race = pd.DataFrame({'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "                             'Race': mapping.Race})\n",
+    "mapping_race.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "mapping.to_csv('mappings.txt', sep='\\t')\n",
+    "mapping_bmi.to_csv('mapping_bmi.txt', sep='\\t')\n",
+    "mapping_site.to_csv('mapping_site.txt', sep='\\t')\n",
+    "mapping_race.to_csv('mapping_race.txt', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## simulated beta diversities "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multipe betas (based on 2 simulated taxa):\n",
+    "# dist_site: two sites with completely different taxa, resulting in large distance\n",
+    "# dist_race: two races have completely different taxa, the other two the same\n",
+    "# dist_bmi: no difference among different bmis\n",
+    "# Expected effect size (from smallest to biggest): dist_bmi < dist_race < dist_site\n",
+    "# Expected p-value (from smallest to biggest): dist_site < dist_race < dist_bmi\n",
+    "\n",
+    "taxa_site = pd.DataFrame({'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "                          'Taxa1': np.repeat(np.array([1000, 10]), 60),\n",
+    "                          'Taxa2': np.repeat(np.array([10, 1000]), 60)})\n",
+    "taxa_site.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "dist_site = pd.DataFrame(distance_matrix(taxa_site.values,\n",
+    "                                         taxa_site.values),\n",
+    "                         index=taxa_site.index, columns=taxa_site.index)\n",
+    "dist_site.to_csv('dist_site.txt', sep='\\t')\n",
+    "\n",
+    "taxa_race = pd.DataFrame({'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "                          'Taxa1': np.repeat(np.array([1000, 100,\n",
+    "                                                       500, 0]), 30),\n",
+    "                          'Taxa2': np.repeat(np.array([0, 100, 500,\n",
+    "                                                       1000]), 30)})\n",
+    "taxa_race.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "dist_race = pd.DataFrame(distance_matrix(taxa_race.values,\n",
+    "                                         taxa_race.values),\n",
+    "                         index=taxa_race.index, columns=taxa_race.index)\n",
+    "dist_race.to_csv('dist_race.txt', sep='\\t')\n",
+    "\n",
+    "taxa_bmi = pd.DataFrame({'#SampleID': np.arange(start=1, stop=121, step=1),\n",
+    "                         'Taxa1': np.round(np.random.uniform(low=0,\n",
+    "                                           high=100, size=120), decimals=0),\n",
+    "                         'Taxa2': np.round(np.random.uniform(low=0,\n",
+    "                                           high=100, size=120), decimals=0)})\n",
+    "taxa_bmi.set_index('#SampleID', inplace=True)\n",
+    "\n",
+    "dist_bmi = pd.DataFrame(distance_matrix(taxa_bmi.values,\n",
+    "                                        taxa_bmi.values),\n",
+    "                        index=taxa_bmi.index, columns=taxa_bmi.index)\n",
+    "dist_bmi.to_csv('dist_bmi.txt', sep='\\t')"
    ]
   },
   {
