add preprint to citations file

--- a/evident/citations.bib
+++ b/evident/citations.bib
@@ -8,3 +8,13 @@
     year={2020},
     pages={1524–1528}
 }
+
+@article {Rahman2022,
+    author = {Rahman, Gibraan and McDonald, Daniel and Gonzalez, Antonio and V{\'a}zquez-Baeza, Yoshiki and Jiang, Lingjing and Casals-Pascual, Climent and Peddada, Shyamal and Hakim, Daniel and Dilmore, Amanda Hazel and Nowinski, Brent and Knight, Rob},
+    title = {Scalable power analysis and effect size exploration of microbiome community differences with Evident},
+    year = {2022},
+    doi = {10.1101/2022.05.19.492684},
+    publisher = {Cold Spring Harbor Laboratory},
+    abstract = {Differentiating microbial communities among samples is a major objective in biomedicine. Quantifying the effect size of these differences allows researchers to understand the factors most associated with communities and to optimize the design and clinical resources required to address particular research questions. Here, we present Evident, a package for effect size calculations and power analysis on microbiome data and show that Evident scales to large datasets with numerous metadata covariates.Competing Interest StatementThe authors have declared no competing interest.},
+    journal = {bioRxiv}
+}
